Add property requests management(Development and Integration Done)
