# src/property-requests/dto/update-property-request-status.dto.ts
@@ -1,0 +1,11 @@
+import { IsEnum, IsOptional, IsString } from 'class-validator';
+
+export class UpdatePropertyRequestStatusDto {
+  @IsEnum(['approved', 'rejected'])
+  status: 'approved' | 'rejected';
+
+  @IsString()
+  @IsOptional()
+  rejectionReason?: string;
+}
+
